# tworld3

./: .gitignore  .gitmodules  README.md  TWorld3.desktop  icon.png.kra
libchips/: CMakeLists.txt  meson.build
libchips/src/: format-ccl.c  format-tws.c  format-tws.h  formats.c  formats.h  logic-generic.c  logic-lynx.c  logic-ms.c  logic.h  misc.c  misc.h  random.c  random.h
libchips/test/: CMakeLists.txt  meson.build
libchips/test/ccl/: format-ccl.cpp
libchips/test/data/ccl/: CCLP1.ccl.h  ccl_embeds.h
libchips/test/data/tws/: example.tws  example.tws.h  public_CCLP1-lynx.dac.tws  public_CCLP1.dac.tws  public_CCLP2.dac.tws  public_CCLP3-lynx.dac.tws  public_CCLP3.dac.tws  public_CCLP4-lynx.dac.tws  public_CCLP4.dac.tws  public_CCLP5-lynx.dac.tws  public_CCLP5.dac.tws  public_CCLXP2.dac.tws  public_CHIPS-lynx.dac.tws  public_CHIPS.dac.tws  public_CHIPS.dac.tws.h  public_CHIPS_lynx.dac.tws.h  tws_embeds.h
libchips/test/logic/: cclp1_tws_playthrough.cpp  cclp_tws_playthrough.cpp
libchips/test/tws/: format-tws.cpp
src/: level_player.py  libchips.py  main.py  preferences.py  renderer.py  set_selector.py  tileset.py
